# COMEBACKHERE

./: .env.local.example  .env.mainnet.example  .env.testnet.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  justfile
.github/: pull_request_template.md
.github/workflows/: backend-tests.yml  ci-abi-metadata.yml  ci-post-deploy-verify.yml
COMEBACKHERE-contracts/: Cargo.toml
backend/: .env.example  Cargo.toml
backend/src/: auth.rs  main.rs  routes.rs  soroban.rs  types.rs
backend/src/routes/: cancel.rs  health.rs  invoices.rs  mod.rs  pay.rs  refund.rs
comebackhere-backend/: package-lock.json  package.json
comebackhere-backend/src/: app.ts  index.ts  indexer.ts
comebackhere-frontend/: package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
comebackhere-frontend/src/: App.css  App.tsx  (+1 more)
contracts/: Cargo.toml
contracts/api-integration-tests/: Cargo.toml
contracts/api-integration-tests/src/: lib.rs
contracts/api-integration-tests/tests/: api.rs
docs/: MAINNET_DEPLOYMENT.md  TESTNET_ONBOARDING.md  abi-snapshot-workflow.md  api-reference.md  contract-interaction-guide.md  dev-environment.md  error-codes.md  glossary.md  troubleshooting.md
frontend/: index.html  package-lock.json  package.json
scripts/: check_abi_snapshot_hygiene.sh  coverage.sh  deploy_local.sh  deploy_mainnet.sh  deploy_testnet.sh  export_deployed_addresses.sh  generate_abi_metadata.py  generate_abi_metadata.sh  validate_env.sh  verify.sh
tests/: README.md  invoice_lifecycle.sh
(+88 files in other folders)
