[package]
name = "comebackhere-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
axum-test = "14"
tokio = { version = "1", features = ["full"] }
