[package]
name = "api-integration-tests"
version = "0.1.0"
edition = "2021"

# Integration tests only; not a library or binary.

[[test]]
name = "api"
path = "tests/api.rs"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
